<resources>
    <string name="app_name">Know Your Crime</string>
    <string name="sort_by_distance_chip">Sort by distance</string>
    <string name="sort_alphabetically_chip">Sort alphabetically</string>
    <string name="crime_icon_desc">crime_icon_desc</string>
    <string name="sample_text">Sample text</string>
    <string name="setting_desc">setting_desc</string>
    <string name="up_fab_desc">up_fab_desc</string>
    <string name="place_icon_desc">place_icon_desc</string>
    <string name="date">Date</string>
    <string name="up_to_date">Up-To-Date</string>
    <string name="apply_and_back">apply and back</string>
    <string name="outcome_status">Outcome status</string>
    <string name="id">Id</string>
    <string name="where">Where</string>
    <string name="settings">Settings</string>
    <string name="current_position">current_position</string>
    <string name="unable_to_prosecute_suspect">Unable to prosecute suspect</string>
    <string name="back_to_settings">back to settings</string>
    <string name="go_to_about_us">Go to about us</string>
    <string name="about_us">About us</string>
    <string name="count_crimes">Count crimes</string>
    <string name="go_to_counted_crimes">Go to counted crimes</string>
    <string name="change_date">Change date</string>
    <string name="know_your_crime_global_app">Know Your Crime App</string>
    <string name="you_are_here">You are here</string>
</resources>